<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<version>3.5.5</version>
	</parent>
	<groupId>dev.mdz</groupId>
	<artifactId>wolpi</artifactId>
	<version>0.1.0-SNAPSHOT</version>
	<name>wolpi</name>
	<description>Wolpi is an extensible IIIF Image Server based on libvips</description>
	<url>https://dbmdz.github.io/wolpi</url>
	<licenses>
		<license>
			<name>MIT License</name>
			<url>https://opensource.org/license/mit/</url>
		</license>
	</licenses>
	<developers>
		<developer>
			<name>Johannes Baiter</name>
			<email>johannes.baiter@bsb-muenchen.de</email>
		</developer>
	</developers>
	<properties>
		<java.version>24</java.version>
		<graalvm.version>24.2.2</graalvm.version>
		<jspecify.version>1.0.0</jspecify.version>
		<guava.version>33.4.8-jre</guava.version>
		<vips-ffm.version>1.9.1</vips-ffm.version>
		<fmt-maven-plugin.version>2.27</fmt-maven-plugin.version>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<dependency>
			<groupId>app.photofox.vips-ffm</groupId>
			<artifactId>vips-ffm-core</artifactId>
			<version>${vips-ffm.version}</version>
		</dependency>

        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit</artifactId>
            <version>1.4.1</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.tngtech.archunit</groupId>
            <artifactId>archunit-junit5</artifactId>
            <version>1.4.1</version>
            <scope>test</scope>
        </dependency>
		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>polyglot</artifactId>
			<version>${graalvm.version}</version>
		</dependency>
		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>js</artifactId>
			<version>${graalvm.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.graalvm.polyglot</groupId>
			<artifactId>python</artifactId>
			<version>${graalvm.version}</version>
			<type>pom</type>
		</dependency>
		<dependency>
			<groupId>org.jspecify</groupId>
			<artifactId>jspecify</artifactId>
			<version>${jspecify.version}</version>
		</dependency>
		<dependency>
			<groupId>com.google.guava</groupId>
			<artifactId>guava</artifactId>
			<version>${guava.version}</version>
		</dependency>
		<dependency>
			<groupId>com.fasterxml.jackson.dataformat</groupId>
			<artifactId>jackson-dataformat-toml</artifactId>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-pool2</artifactId>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<resources>
			<resource>
				<directory>${project.basedir}/src/main/resources</directory>
				<filtering>false</filtering>
			</resource>
			<resource>
				<directory>${project.basedir}/src/main/js</directory>
				<targetPath>js</targetPath>
			</resource>
		</resources>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<release>24</release>
					<compilerArgs>
						<arg>--add-exports=org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED</arg>
					</compilerArgs>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.jacoco</groupId>
				<artifactId>jacoco-maven-plugin</artifactId>
				<version>0.8.13</version>
				<executions>
					<execution>
						<id>prepare-agent</id>
						<goals>
							<goal>prepare-agent</goal>
						</goals>
					</execution>
					<execution>
						<id>report</id>
						<goals>
							<goal>report</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.2</version>
				<configuration>
					<argLine>
						--add-exports=org.graalvm.polyglot/org.graalvm.polyglot.impl=ALL-UNNAMED
						-Dpolyglot.engine.WarnInterpreterOnly=false
						--enable-native-access=app.photofox.vipsffm,org.graalvm.truffle
						-XX:+EnableDynamicAgentLoading
					</argLine>
				</configuration>
            </plugin>
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<jvmArguments>--enable-native-access=app.photofox.vipsffm,org.graalvm.truffle</jvmArguments>
				</configuration>
				<executions>
					<execution>
						<goals>
							<goal>build-info</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<groupId>com.spotify.fmt</groupId>
				<artifactId>fmt-maven-plugin</artifactId>
				<version>${fmt-maven-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>format</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
    </build>


	<repositories>
	  <!-- credentials for server in settings.xml -->
	  <repository>
		<id>ossrh-snapshots</id>
		<name>Sonatype Nexus Snapshots</name>
		<url>https://oss.sonatype.org/content/repositories/snapshots</url>
		<snapshots>
		  <enabled>true</enabled>
		</snapshots>
		<releases>
		  <enabled>false</enabled>
		</releases>
	  </repository>
	</repositories>
</project>
